Update all cable-ui budget sheet components with individual component names. Directory structure reflects component names

--- a/src/app/components/summaryLinesContainer/subComponents/summaryLine/component.css
+++ b/src/app/components/summaryLinesContainer/subComponents/summaryLine/component.css
@@ -18,11 +18,15 @@
     text-align: center;
 }
 
-[data-inline-template="summary-line"][ data-expandable-container ] + hr {
+[data-inline-template="summary-line"][ data-expandable-container ] > hr {
     margin-bottom: 20px;
 }
 
-[data-inline-template="summary-line"][ data-expandable-container="collapsed" ] + hr {
+[data-inline-template="summary-line"][ data-expandable-container="expanded" ] > hr {
+    margin-top: 20px; 
+} 
+
+[data-inline-template="summary-line"][ data-expandable-container="collapsed" ] > hr {
     margin-top: 0; 
 } 
 
