Update component names

--- a/src/app/components/summaryLinesContainer/subComponents/summaryHeader/component.css
+++ b/src/app/components/summaryLinesContainer/subComponents/summaryHeader/component.css
@@ -1,7 +1,7 @@
-[data-inline-template="summary-header"] {
+[data-inline-template="summaryHeader"] {
     padding-left: 45px; 
 }
 
-[data-inline-template="summary-header"] {
+[data-inline-template="summaryHeader"] {
     font-weight: bold;
 }
