--- a/src/app/components/summaryLinesContainer/subComponents/summaryLine/component.css
+++ b/src/app/components/summaryLinesContainer/subComponents/summaryLine/component.css
@@ -3,33 +3,42 @@
     margin-top: 5px; 
 }
 
-[data-inline-template="summary-line"] .expandable-body {
+[data-inline-template="summaryLine"] .expandable-body {
     width: calc(100% - 50px);
     padding-left: 0;
 } 
 
-[data-inline-template="summary-line"]  [data-expandable-target] {
+[data-inline-template="summaryLine"]  [data-expandable-target] {
     background-color: var(--gray);
 } 
 
-[data-inline-template="summary-line"] form select[disabled], 
-[data-inline-template="summary-line"] form textarea[disabled], 
-[data-inline-template="summary-line"] form input[disabled] {
+[data-inline-template="summaryLine"] form select[disabled], 
+[data-inline-template="summaryLine"] form textarea[disabled], 
+[data-inline-template="summaryLine"] form input[disabled] {
     text-align: center;
 }
 
-[data-inline-template="summary-line"][ data-expandable-container ] > hr {
+[data-inline-template="summaryLine"][ data-expandable-container ] > hr {
     margin-bottom: 20px;
 }
 
-[data-inline-template="summary-line"][ data-expandable-container="expanded" ] > hr {
+[data-inline-template="summaryLine"][ data-expandable-container="expanded" ] > hr {
     margin-top: 20px; 
 } 
 
-[data-inline-template="summary-line"][ data-expandable-container="collapsed" ] > hr {
+[data-inline-template="summaryLine"][ data-expandable-container="collapsed" ] > hr {
     margin-top: 0; 
 } 
 
-[data-inline-template="summary-line"] .actions-column button {
+[data-inline-template="summaryLine"] .actions-column button {
     margin-top: 7px; 
+} 
+
+[data-transaction-line-container] {
+    transition: all 175ms ease-out;
+    transition-delay: 75ms;
+}
+
+[data-inline-template="summaryLine"][ data-expandable-container="expanded" ] [data-transaction-line-container] {
+    margin-top: 20px;
 }
