Update padding on content container

--- a/src/app/assets/styles/main.css
+++ b/src/app/assets/styles/main.css
@@ -33,6 +33,15 @@
     padding-left: 20px;
     padding-right: 20px;
     margin: 0 auto;
+} 
+
+@media (max-width: 1920px) {
+
+    .content-lock {
+        padding-left: 40px; 
+        padding-right: 40px;
+    }
+
 }
 
 /* Card Styling */
