Resolved feature, able to use preset transaction codes to populate summary lin

--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -149,8 +149,8 @@
                                                                 <input type="text" name="transaction-summary" placeholder="Add transaction summary" data-transaction-summary/>
                                                             </div>
                                                             <div class="column"> 
-                                                                <label for="transaction-date">Transaction Due Date</label>
-                                                                <input type="text" name="transaction-date" placeholder="1st" data-transaction-date disabled/>
+                                                                <label for="transaction-due-date">Transaction Due Date</label>
+                                                                <input type="text" name="transaction-due-date" placeholder="1st" data-transaction-due-date disabled/>
                                                             </div>
                                                             <div class="column">
                                                                 <label for="income">Income</label>
@@ -181,7 +181,7 @@
                                             <div data-expandable-target>
                                                 <div class="h-row">
                                                     <div class="v-col has-mg-top-0 has-mg-bottom-10" data-transaction-line-container>
-                                                        <form class="has-mg-bottom-10" data-inline-template="transactionLine" data-transaction-type="credit">
+                                                        <form class="has-mg-bottom-10" data-inline-template="transactionLine" data-transaction-type="credit"  data-ref="ssr">
                                                             <div class="summary-columns"> 
                                                                 <div class="column"><!-- placeholder --></div>
                                                                 <div class="column">
