Update line-height of transactions to vertically fit more information in the viewport. Add hover effect to transactions on hover

--- a/src/app/assets/styles/variables.css
+++ b/src/app/assets/styles/variables.css
@@ -7,6 +7,7 @@
     /* Color */
     --main-color: #e05206; 
     --secondary-color: #2B2D41;
+    --dark-gray: #B4B4B4;
     --success: #126b37; 
     --mint: #63EFBE;  
     --failure: #E03131;
