--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -181,8 +181,8 @@
                                             <div data-expandable-target>
                                                 <div class="h-row">
                                                     <div class="v-col has-mg-top-0 has-mg-bottom-10" data-transaction-line-container>
-                                                        <form class="has-mg-bottom-10" data-inline-template="transactionLine" data-transaction-type="credit"  data-ref="ssr">
-                                                            <div class="summary-columns"> 
+                                                        <form class="has-mg-bottom-0 has-pd-top-10" data-inline-template="transactionLine" data-transaction-type="credit"  data-ref="ssr">
+                                                            <div class="summary-columns has-mg-bottom-5"> 
                                                                 <div class="column"><!-- placeholder --></div>
                                                                 <div class="column">
                                                                     <label for="transaction-summary">Transaction Summary</label>
@@ -247,12 +247,12 @@
                                                                     <button class="btn-no-background" data-delete-transaction-line><img class="icon" src="<%=require('../../../../src/app/assets/icons/close.svg')%>"/></button>
                                                                 </div>
                                                             </div> 
-                                                            <hr class="has-mg-top-10 has-mg-bottom-10">
+                                                            <hr class="has-mg-top-0 has-mg-bottom-0">
                                                         </form>
                                                     </div>
                                                 </div>  
                                                 <div class="h-row has-text-center" data-transaction-controls>
-                                                    <div class="v-col has-mg-top-0">
+                                                    <div class="v-col has-mg-top-10">
                                                         <button class="has-underline" data-add-credit><strong class="no-underline">+</strong> Add Credit</button><button class="has-underline" data-add-debit><strong class="no-underline has-large-font-size">-</strong> Add Debit</button>
                                                     </div>
                                                 </div>
