Update input options and added required fields and number types to HTML

--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -36,25 +36,25 @@
                             <div class="v-col lg-4">
                                 <label for="report-year">Year</label>
                                 <select class="has-semibold-font-weight" name="report-year" data-year>
-                                    <option value="2022">2022</option>
-                                    <option value="2023">2023</option>
+                                    <option value="2022">2022
+                                    <option value="2023">2023
                                 </select>
                             </div>
                             <div class="v-col lg-4">
                                 <label for="report-month">Month</label>
                                 <select class="has-semibold-font-weight" name="report-month" data-month>
-                                    <option value="1">January</option>
-                                    <option value="2">February</option>
-                                    <option value="3">March</option>
-                                    <option value="4">April</option>
-                                    <option value="5">May</option>
-                                    <option value="6">June</option>
-                                    <option value="7">July</option>
-                                    <option value="8">August</option>
-                                    <option value="9">September</option>
-                                    <option value="10">October</option>
-                                    <option value="11">November</option>
-                                    <option value="12">December</option>
+                                    <option value="1">January
+                                    <option value="2">February
+                                    <option value="3">March
+                                    <option value="4">April
+                                    <option value="5">May
+                                    <option value="6">June
+                                    <option value="7">July
+                                    <option value="8">August
+                                    <option value="9">September
+                                    <option value="10">October
+                                    <option value="11">November
+                                    <option value="12">December
                                 </select>
                             </div>
                         </div>
@@ -141,12 +141,12 @@
                                                             <div class="column"> 
                                                                 <label for="transaction-codes">Transaction Code</label>
                                                                 <select name="transaction-codes" data-transaction-codes>
-                                                                    <option value="null">Transaction Code</option>
+                                                                    <option value="null">Transaction Code
                                                                 </select>
                                                             </div>
                                                             <div class="column">
                                                                 <label for="transaction-summary">Transaction Summary</label>
-                                                                <input type="text" name="transaction-summary" placeholder="Add transaction summary" data-transaction-summary/>
+                                                                <input type="text" name="transaction-summary" placeholder="Add transaction summary" data-transaction-summary required/>
                                                             </div>
                                                             <div class="column"> 
                                                                 <label for="transaction-due-date">Transaction Due Date</label>
@@ -154,15 +154,15 @@
                                                             </div>
                                                             <div class="column">
                                                                 <label for="income">Income</label>
-                                                                <input type="text" name="income" placeholder="$0.00" data-income disabled/>
+                                                                <input type="number" step=0.01 name="income" placeholder=0.00 data-income disabled/>
                                                             </div>
                                                             <div class="column">
                                                                 <label for="expense">Expense</label>
-                                                                <input type="text" name="expense" placeholder="$0.00" data-expense disabled/>
+                                                                <input type="number" step=0.01 name="expense" placeholder=0.00 data-expense disabled/>
                                                             </div>
                                                             <div class="column">
                                                                 <label for="balance">Balance</label>
-                                                                <input type="text" name="balance" placeholder="$0.00" data-balance disabled/>
+                                                                <input type="number" step=0.01 name="balance" placeholder=0.00 data-balance disabled/>
                                                             </div>
                                                             <div class="column">
                                                                 <label for="status">Status</label>
@@ -186,61 +186,61 @@
                                                                 <div class="column"><!-- placeholder --></div>
                                                                 <div class="column">
                                                                     <label for="transaction-summary">Transaction Summary</label>
-                                                                    <input type="text" name="transaction-summary" placeholder="Add description of individual credit/debit" data-transaction-summary/>
+                                                                    <input type="text" name="transaction-summary" placeholder="Add description of individual credit/debit" data-transaction-summary required/>
                                                                 </div>
                                                                 <div class="column"> 
                                                                     <label for="transaction-codes">Transaction Due Date</label>
                                                                     <select name="transaction-codes" data-transaction-due-date>
-                                                                        <option value="1">1</option>
-                                                                        <option value="2">2</option>
-                                                                        <option value="3">3</option>
-                                                                        <option value="4">4</option>
-                                                                        <option value="5">5</option>
-                                                                        <option value="6">6</option>
-                                                                        <option value="7">7</option>
-                                                                        <option value="8">8</option>
-                                                                        <option value="9">9</option>
-                                                                        <option value="10">10</option>
-                                                                        <option value="11">11</option>
-                                                                        <option value="12">12</option>
-                                                                        <option value="13">13</option>
-                                                                        <option value="14">14</option>
-                                                                        <option value="15">15</option>
-                                                                        <option value="16">16</option>
-                                                                        <option value="17">17</option>
-                                                                        <option value="18">18</option>
-                                                                        <option value="19">19</option>
-                                                                        <option value="20">20</option>
-                                                                        <option value="21">21</option>
-                                                                        <option value="22">22</option>
-                                                                        <option value="23">23</option>
-                                                                        <option value="24">24</option>
-                                                                        <option value="25">25</option>
-                                                                        <option value="26">26</option>
-                                                                        <option value="27">27</option>
-                                                                        <option value="28">28</option>
-                                                                        <option value="29">29</option>
-                                                                        <option value="30">30</option>
-                                                                        <option value="31">31</option>
+                                                                        <option value="1" selected>1
+                                                                        <option value="2">2
+                                                                        <option value="3">3
+                                                                        <option value="4">4
+                                                                        <option value="5">5
+                                                                        <option value="6">6
+                                                                        <option value="7">7
+                                                                        <option value="8">8
+                                                                        <option value="9">9
+                                                                        <option value="10">10
+                                                                        <option value="11">11
+                                                                        <option value="12">12
+                                                                        <option value="13">13
+                                                                        <option value="14">14
+                                                                        <option value="15">15
+                                                                        <option value="16">16
+                                                                        <option value="17">17
+                                                                        <option value="18">18
+                                                                        <option value="19">19
+                                                                        <option value="20">20
+                                                                        <option value="21">21
+                                                                        <option value="22">22
+                                                                        <option value="23">23
+                                                                        <option value="24">24
+                                                                        <option value="25">25
+                                                                        <option value="26">26
+                                                                        <option value="27">27
+                                                                        <option value="28">28
+                                                                        <option value="29">29
+                                                                        <option value="30">30
+                                                                        <option value="31">31
                                                                     </select>
                                                                 </div>
                                                                 <div class="column">
                                                                     <label for="income">Income</label>
-                                                                    <input class="has-text-center" type="text" name="income" placeholder="0.00" data-income value=0 />
+                                                                    <input class="has-text-center" type="number" step=0.01 name="income" placeholder=0.00 data-income value=0.00 required/>
                                                                 </div>
                                                                 <div class="column">
                                                                     <label for="expense">Expense</label>
-                                                                    <input class="has-text-center" type="text" name="expense"  placeholder="0.00" data-expense disabled />
+                                                                    <input class="has-text-center" type="number" step=0.01 name="expense"  placeholder=0.00 data-expense disabled />
                                                                 </div>
                                                                 <div class="column"><!-- placeholder --></div>
                                                                 <div class="column">
                                                                     <label for="transaction-status">Status</label>
                                                                     <select name="transaction-status" data-transaction-status>
-                                                                        <option value="pending">Pending</option>
-                                                                        <option value="paid">Paid</option>
-                                                                        <option value="void">Void</option>
-                                                                        <option value="past-due">Past Due</option>
-                                                                        <option value="adjusted">Adjusted</option>
+                                                                        <option value="pending">Pending
+                                                                        <option value="paid">Paid
+                                                                        <option value="void">Void
+                                                                        <option value="past-due">Past Due
+                                                                        <option value="adjusted">Adjusted
                                                                     </select>
                                                                 </div>
                                                                 <div class="column actions-column has-text-center">
