Transactions within a summaryline with a negative balance turn red or green when the balance is positive

--- a/src/app/assets/styles/variables.css
+++ b/src/app/assets/styles/variables.css
@@ -9,8 +9,9 @@
     --secondary-color: #2B2D41;
     --dark-gray: #B4B4B4;
     --success: #126b37; 
-    --mint: #63EFBE;  
-    --failure: #E03131;
+    --mint: #63EFBE;   
+    --failure: #E03131; 
+    --watermelon: #FFB2B2;
     --gray: #E6E6E6; 
     --border-1: #B4B4B4; 
 
