--- a/src/app/components/budgetSheetContainer/subComponents/summaryLine/component.css
+++ b/src/app/components/budgetSheetContainer/subComponents/summaryLine/component.css
@@ -37,4 +37,17 @@
 [data-transaction-line-container] {
     transition: all 175ms ease-out;
     transition-delay: 75ms;
+} 
+
+[data-inline-template="summaryLine"].credit-background [data-inline-template="transactionLine"] { 
+    background-color: var( --mint );
+}
+
+[data-inline-template="summaryLine"].debit-background [data-inline-template="transactionLine"] { 
+    background-color: var( --watermelon );
+}
+
+[data-inline-template="summaryLine"].debit-background [data-inline-template="transactionLine"] hr, 
+[data-inline-template="summaryLine"].credit-background [data-inline-template="transactionLine"] hr {
+    background-color: #fff;
 }
