Update add default to Transaction Code selection

--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -140,9 +140,7 @@
                                                         <div class="summary-columns"> 
                                                             <div class="column"> 
                                                                 <label for="transaction-codes">Transaction Code</label>
-                                                                <select name="transaction-codes" data-transaction-codes>
-                                                                    <option value="null">Transaction Code
-                                                                </select>
+                                                                <select name="transaction-codes" data-transaction-codes></select>
                                                             </div>
                                                             <div class="column">
                                                                 <label for="transaction-summary">Transaction Summary</label>
