--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -9,40 +9,49 @@
 <body>  
     <div class="main-content">
         <div class="content-lock"> 
-            <div class="h-row">
-                <div class="v-col">
-                    <header>
-                        <div class="h-row">
-                            <div class="v-col lg-4 lg-x-6" >
-                                <h1>Monthly Budget Tracker</h1>
-                            </div>
-                            <div class="v-col lg-4 lg-x-6">
-                                <nav class="text-align-right">
-                                    <ul class="inline">
-                                        <li><a href="">Budget Tracker</a></li>
-                                        <li><a href="">Billing Templates</a></li>
-                                        <li><a href="">Reports</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </header>
+
+            <header>
+                <div class="h-row">
+                    <div class="v-col lg-4 lg-x-6" >
+                        <h1>Monthly Budget Tracker</h1>
+                    </div>
+                    <div class="v-col lg-4 lg-x-6">
+                        <nav class="text-align-right">
+                            <ul class="inline">
+                                <!-- <li><a href="">Budget Tracker</a></li>
+                                <li><a href="">Billing Templates</a></li>
+                                <li><a href="">Reports</a></li> -->
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-            </div>
+            </header>
+
             <div class="h-row">
                 <div class="v-col lg-2">
-                    <form data-inline-template="report-selector"> 
+                    <form data-inline-template="budgetSheetSelector"> 
                         <div class="h-row">
                             <div class="v-col lg-4">
-                                <label for="report-year">Year</label>
-                                <select class="has-semibold-font-weight" name="report-year" data-year>
+                                <label for="report-year" class="hidden-text">Year</label>
+                                <select class="has-semibold-font-weight" name="report-year" data-report-year required>
+                                    <option disabled>Year
+                                    <option value="2020">2020
+                                    <option value="2021">2021
                                     <option value="2022">2022
-                                    <option value="2023">2023
+                                    <option value="2023" selected>2023
+                                    <option value="2024">2024
+                                    <option value="2025">2025
+                                    <option value="2026">2026
+                                    <option value="2027">2027
+                                    <option value="2028">2028
+                                    <option value="2029">2029
+                                    <option value="2030">2030
                                 </select>
                             </div>
                             <div class="v-col lg-4">
-                                <label for="report-month">Month</label>
-                                <select class="has-semibold-font-weight" name="report-month" data-month>
+                                <label for="report-month" class="hidden-text">Month</label>
+                                <select class="has-semibold-font-weight" name="report-month" data-report-month required>
+                                    <option disabled>Month
                                     <option value="1">January
                                     <option value="2">February
                                     <option value="3">March
@@ -274,10 +283,10 @@
                                     <img src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
                                     Save Budget
                                 </button>
-                                <button class="icon-left btn-has-background-mint" type="button" data-trigger-finalize-budget>
+                                <!-- <button class="icon-left btn-has-background-mint" type="button" data-trigger-finalize-budget>
                                     <img src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
                                     Finalize
-                                </button>
+                                </button> -->
                             </div>
                         </div>
                         
@@ -286,6 +295,5 @@
             </div> 
         </div>
     </div>
-
 </body>
 </html>
