--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -10,6 +10,7 @@
     <div class="main-content">
         <div class="content-lock"> 
 
+            <div id="banner-alerts"></div>
             <header>
                 <div class="h-row">
                     <div class="v-col lg-4 lg-x-6" >
