--- a/src/app/assets/styles/main.css
+++ b/src/app/assets/styles/main.css
@@ -29,6 +29,7 @@
 .content-lock {
     display: block;
     position: relative;
+    width: 100%;
     max-width: 1500px;
     padding-left: 20px;
     padding-right: 20px;
