- On transaction line update status or due date, summary line calculates status and due date respectively - Summary line renders transaction code, summary description, status, and due date using onUpdate hook

--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -197,8 +197,8 @@
                                                                     <input type="text" name="transaction-summary" placeholder="Add description of individual credit/debit" data-transaction-summary required/>
                                                                 </div>
                                                                 <div class="column"> 
-                                                                    <label for="transaction-codes">Transaction Due Date</label>
-                                                                    <select name="transaction-codes" data-transaction-due-date>
+                                                                    <label for="transaction-due-date">Transaction Due Date</label>
+                                                                    <select name="transaction-due-date" data-transaction-due-date>
                                                                         <option value="1" selected>1
                                                                         <option value="2">2
                                                                         <option value="3">3
@@ -284,10 +284,6 @@
                                     <img src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
                                     Save Budget
                                 </button>
-                                <!-- <button class="icon-left btn-has-background-mint" type="button" data-trigger-finalize-budget>
-                                    <img src="<%=require('../../../../src/app/assets/icons/add.svg')%>">
-                                    Finalize
-                                </button> -->
                             </div>
                         </div>
                         
