--- a/src/app/assets/styles/variables.css
+++ b/src/app/assets/styles/variables.css
@@ -9,11 +9,15 @@
     --secondary-color: #2B2D41;
     --dark-gray: #B4B4B4;
     --success: #126b37; 
-    --mint: #63EFBE;   
+    --mint: #63EFBE;
+    --jade: #0CA678;    
     --failure: #E03131; 
-    --watermelon: #FFB2B2;
+    --watermelon: #FFB2B2; 
+    --salmon: #FE8787; 
     --gray: #E6E6E6; 
     --border-1: #B4B4B4; 
+    --lemon: #FFF9B2;
+    --sandstorm: #FFD43B; 
 
     /* Dropshadows */
     --solid-dropshadow: 0px 5px 0px 0px #2B2D41; 
