Update record highlighting and Past Due detection

--- a/src/app/pages/index/index.html
+++ b/src/app/pages/index/index.html
@@ -121,8 +121,8 @@
                             <div class="v-col">
                                 <header data-inline-template="summaryHeader"> 
                                     <div class="summary-columns has-text-center">
-                                        <div class="column has-medium-font-size has-semibold-font-weight">Transaction Code</div>
-                                        <div class="column has-medium-font-size has-semibold-font-weight">Summary</div>
+                                        <div class="column has-medium-font-size has-semibold-font-weight">Categories</div>
+                                        <div class="column has-medium-font-size has-semibold-font-weight">Summaries</div>
                                         <div class="column has-medium-font-size has-semibold-font-weight">Due</div>
                                         <div class="column has-medium-font-size has-semibold-font-weight">Income</div>
                                         <div class="column has-medium-font-size has-semibold-font-weight">Expense</div>
